--- a/android/com.varmarken.rejseplanen.afgangstavlen/res/values/strings.xml
+++ b/android/com.varmarken.rejseplanen.afgangstavlen/res/values/strings.xml
@@ -2,12 +2,17 @@
 <resources>
 
     <string name="app_name">Afgangstavlen</string>
-    <string name="title_section1">Section 1</string>
+    <!-- auto generated navigation items
+	<string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    -->
+    
+    <string name="nav_drawer_search">Søg stoppested</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
-	<string name="stop_search_hint">Find stoppested</string>
+    <string name="stop_search_hint">Find stoppested</string>
+
 </resources>
